# lipstick

./: .gitmodules  Makefile  README.md
highlighter/: Cargo.toml
highlighter/src/: lib.rs
parsers/python/: .npmignore  Cargo.toml  package.json
parsers/python/bindings/rust/: lib.rs
